--- a/TravelB/src/main/resources/templates/login.html
+++ b/TravelB/src/main/resources/templates/login.html
@@ -9,29 +9,27 @@
     <meta content="" name="description">
 
     <!-- Favicon -->
-    <link th:href="@{/img/favicon.ico}" rel="icon">
+    <link href="img/favicon.ico" rel="icon">
 
     <!-- Google Web Fonts -->
-    <link rel="preconnect"  th:href="@{https://fonts.googleapis.com}">
-    <link rel="preconnect"  th:href="@{https://fonts.gstatic.com}" crossorigin>
-    <link  th:href="@{https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap}" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Heebo:wght@400;500;600&family=Nunito:wght@600;700;800&display=swap" rel="stylesheet">
 
     <!-- Icon Font Stylesheet -->
-    <link  th:href="@{https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css}" rel="stylesheet">
-    <link  th:href="@{https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css}" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
 
     <!-- Libraries Stylesheet -->
-  <link th:href="@{/lib/animate/animate.min.css}" rel="stylesheet">
-  <link th:href="@{/owlcarousel/assets/owl.carousel.min.css}" rel="stylesheet">
-  <link th:href="@{/tempusdominus/css/tempusdominus-bootstrap-4.min.css}" rel="stylesheet" />
+    <link href="lib/animate/animate.min.css" rel="stylesheet">
+    <link href="lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+    <link href="lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
 
     <!-- Customized Bootstrap Stylesheet -->
-    <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Template Stylesheet -->
-    <link th:href="@{/css/style.css}" rel="stylesheet">
-   
-    <link rel="stylesheet" th:href="@{/css/login.css}">
+    <link href="css/style.css" rel="stylesheet">\
     <style>
 
     </style>
@@ -51,11 +49,7 @@
     <div class="container-fluid bg-dark px-5 d-none d-lg-block">
         <div class="row gx-0">
             <div class="col-lg-8 text-center text-lg-start mb-2 mb-lg-0">
-                <div class="d-inline-flex align-items-center" style="height: 45px;">
-                    <small class="me-3 text-light"><i class="fa fa-map-marker-alt me-2"></i>123 Street, New York, USA</small>
-                    <small class="me-3 text-light"><i class="fa fa-phone-alt me-2"></i>+012 345 6789</small>
-                    <small class="text-light"><i class="fa fa-envelope-open me-2"></i>info@example.com</small>
-                </div>
+
             </div>
             <div class="col-lg-4 text-center text-lg-end">
                 <div class="d-inline-flex align-items-center" style="height: 45px;">
@@ -74,7 +68,7 @@
     <!-- Navbar & Hero Start -->
     <div class="container-fluid position-relative p-0">
         <nav class="navbar navbar-expand-lg navbar-light px-4 px-lg-5 py-3 py-lg-0">
-            <a href="" class="navbar-brand p-0">
+            <a href="index" class="navbar-brand p-0">
                 <h1 class="text-primary m-0"><i class="fa fa-map-marker-alt me-3"></i>Tourist</h1>
                 <!-- <img src="img/logo.png" alt="Logo"> -->
             </a>
@@ -85,22 +79,10 @@
                 <div class="navbar-nav ms-auto py-0">
                     <a th:href="@{'/index'}" class="nav-item nav-link">首頁</a>
                     <a th:href="@{'/find'}" class="nav-item nav-link"  >商品資訊</a>
-                    <a href="service" class="nav-item nav-link">Services</a>
-                    <a href="package" class="nav-item nav-link">Packages</a>
                     <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
-                        <div class="dropdown-menu m-0">
-                            <a href="destination" class="dropdown-item">Destination</a>
-                            <a href="booking" class="dropdown-item">Booking</a>
-                            <a href="team" class="dropdown-item">Travel Guides</a>
-                            <a href="testimonial" class="dropdown-item">Testimonial</a>
-                            <a href="404" class="dropdown-item">404 Page</a>
-                        </div>
                     </div>
-                    <a onclick="" href="contact" class="nav-item nav-link">Contact</a>
-                    <a href="register" class="nav-item nav-link">註冊</a>
                 </div>
-                <a href="login" class="btn btn-primary rounded-pill py-2 px-4 active">登入</a>
+                <a href="login" class="btn btn-primary rounded-pill py-2 px-4">會員登錄</a>
             </div>
         </nav>
 
@@ -108,9 +90,8 @@
             <div class="container py-5">
                 <div class="row justify-content-center py-5">
                     <div class="col-lg-4 col-md-12 wow fadeInUp" data-wow-delay="0.5s"><!--col-lg-10 pt-lg-5 mt-lg-5 text-center-->
-                        <h1 class="display-3 text-white animated slideInDown">登入</h1>
-<!---------------會員登入---------------------->
-                        <!-- <form >
+                        <h1 class="display-3 text-white animated slideInDown">會員註冊</h1>
+                        <form >
                             <div class="row g-3">
                                 <div class="col-12">
                                     <div class="form-floating">
@@ -127,31 +108,9 @@
                                 </div>
                                 
                             </div>
-                        </form> -->
-                        <section class="form-block">
-                            <form class="login-form" id="loginForm" th:Object="${memberAccount}" method="POST" th:action="@{/login}" enctype="multipart/form-data" autocomplete="off">
-                                <section class="form-input-block">
-                                    <div class="input-label">帳號/Email</div>
-                                    <div class="input-area">
-                                        <div class="input-img"><img th:src="@{/images/person.png}"></div>
-                                        <input type="email" name="email"  maxlength="64" placeholder="請輸入Email"/>
-                                    </div>
-                                </section>
-                                <section class="form-input-block">
-                                    <div class="input-label">密碼</div>
-                                    <div class="input-area">
-                                        <div class="input-img"><img th:src="@{/images/lock.png}"></div>
-                                        <input type="password" name="password" maxlength="16" placeholder="請輸入密碼"/>
-                                    </div>
-                                </section>
-                                <button type="submit">登入</button>
-                                <section class="form-link">
-                                    <span>還不是會員?</span><a th:href="@{/register}">立即註冊</a>
-                                </section>
-                            </form> 
-                        </section>
+                        </form>
                         <div class="col-12">
-                            <button id="btnPostUser" class="btn btn-primary w-100 py-3" type="submit" onclick="login()">下一步</button>
+                            <button id="btnPostUser" class="btn btn-primary w-100 py-3" type="submit" onclick="login()">註冊</button>
                         </div>
                     </div>
                     
@@ -252,20 +211,20 @@
     <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
 
 	
-      <!-- JavaScript Libraries -->
-      <script th:src="@{https://code.jquery.com/jquery-3.4.1.min.js}"></script>
-      <script th:src="@{https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js}"></script>
-      <script th:src="@{/lib/wow/wow.min.js}"></script>
-      <script th:src="@{/lib/easing/easing.min.js}"></script>
-      <script th:src="@{/lib/waypoints/waypoints.min.js}"></script>
-      <script th:src="@{/lib/owlcarousel/owl.carousel.min.js}"></script>
-      <script th:src="@{/lib/tempusdominus/js/moment.min.js}"></script>
-      <script th:src="@{/lib/tempusdominus/js/moment-timezone.min.js}"></script>
-      <script th:src="@{/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js}"></script>
-  
-      <!-- Template Javascript -->
-      <script th:src="@{/js/main.js}"></script>
-      <script th:src="@{/js/login.js}"></script>
+    <!-- JavaScript Libraries -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="lib/wow/wow.min.js"></script>
+    <script src="lib/easing/easing.min.js"></script>
+    <script src="lib/waypoints/waypoints.min.js"></script>
+    <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+    <script src="lib/tempusdominus/js/moment.min.js"></script>
+    <script src="lib/tempusdominus/js/moment-timezone.min.js"></script>
+    <script src="lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js"></script>
+
+    <!-- Template Javascript -->
+    <script src="js/main.js"></script>
+
     <script>
 
 </script>
